Bug 495182 - WireGuard is not considered a VPN connection
Summary: WireGuard is not considered a VPN connection
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Networking in general (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-10-22 11:54 UTC by ratijas
Modified: 2024-12-23 18:23 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.3.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description ratijas 2024-10-22 11:54:39 UTC
SUMMARY
For some technical reason, WireGuard VPN connections are not considered to be VPN (NetworkManager::ConnectionSettings::Vpn), which causes issues in UI:

- connection details lacks information about VPN type, omitting code branch

        } else if (m_type == NetworkManager::ConnectionSettings::Vpn) {
            m_details << i18n("VPN Plugin") << m_vpnType;

- having no connection details whatsoever causes a stray separator line below the "Configure" button in the applet list item. This separator is rendered by ExpandableListItem.qml from libplasma, but there is no way for that library component to detect whether the custom content is internally empty or not.
- There is no other way to tell the user that this is a WireGuard connection, it's just some randomly named item with a shield icon.

STEPS TO REPRODUCE
1. Add or import a WireGuard configuration
2. Open the applet
3. Expand the WireGuard configuration's list item.

OBSERVED RESULT
No description whatsoever, stray separator line at the bottom.

EXPECTED RESULT
It should have a VPN type information at the bottom.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.2.1
KDE Frameworks Version: 6.7.0
Qt Version: 6.8.0
Kernel Version: 6.11.4-arch1-1 (64-bit)

ADDITIONAL INFORMATION
This issue has been around since forever, because WireGuard is not a plugin for NetworkManager.
Comment 1 Bug Janitor Service 2024-10-22 12:24:17 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-nm/-/merge_requests/376
Comment 2 ratijas 2024-10-22 15:24:05 UTC
Git commit 9b4f725e560d4250d75e43ed0e3268addfb645ce by ivan tkachenko.
Committed on 22/10/2024 at 12:24.
Pushed by ngraham into branch 'master'.

basic details for wireguard

M  +4    -0    libs/models/networkmodelitem.cpp

https://invent.kde.org/plasma/plasma-nm/-/commit/9b4f725e560d4250d75e43ed0e3268addfb645ce
Comment 3 Ben Cooksley 2024-12-23 18:23:48 UTC
Bulk transfer as requested in T17796