basic details for wireguard

BUG: 495182